--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,8 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="transparent">#00000000</color>
+    <color name="blue_light">#c0d8f9</color>
+    <color name="blue">#30B7EB</color>
+    <color name="grey_black">#232631</color>
 </resources>
