--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,7 +1,17 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Base.Theme.SubmissionProject" parent="Theme.Material3.DayNight.NoActionBar">
+    <style name="Base.Theme.SubmissionProject" parent="Theme.Material3.DayNight">
         <!-- Customize your dark theme here. -->
         <!-- <item name="colorPrimary">@color/my_dark_primary</item> -->
+
+        <item name="colorPrimary">@color/blue</item>
+        <item name="colorOnPrimary">@color/grey_black</item>
+        <item name="android:windowBackground">@color/grey_black</item>
+        <item name="actionBarStyle">@style/Base.Theme.ActionBar</item>
+
+    </style>
+
+    <style name="Base.Theme.ActionBar" parent="Widget.MaterialComponents.ActionBar.Primary">
+        <item name="android:background">@color/blue</item>
     </style>
 </resources>
