--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -7,6 +7,7 @@
     tools:context=".DetailActivity">
 
     <androidx.cardview.widget.CardView
+        android:id="@+id/card_view"
         android:layout_width="match_parent"
         android:layout_height="500dp"
         android:background="@color/black"
@@ -21,6 +22,7 @@
             android:layout_height="match_parent">
 
             <ImageView
+                android:id="@+id/iv_logo"
                 android:layout_width="160dp"
                 android:layout_height="160dp"
                 tools:src="@drawable/webstorm"
@@ -28,6 +30,7 @@
                 android:layout_centerHorizontal="true"/>
 
             <TextView
+                android:id="@+id/tv_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
@@ -49,6 +52,7 @@
                 android:layout_marginStart="10dp"/>
 
             <TextView
+                android:id="@+id/tv_description"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
