--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -61,6 +61,16 @@
                 android:text="@string/testDesc"
                 android:textColor="@color/grey_black"/>
 
+            <ImageView
+                android:id="@+id/iv_action_share"
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                android:src="@drawable/share"
+                android:layout_centerHorizontal="true"
+                android:layout_below="@id/tv_description"
+                android:layout_marginTop="85dp"/>
+
+
         </RelativeLayout>
 
     </androidx.cardview.widget.CardView>
