--- a/app/src/main/res/layout/item_row_product.xml
+++ b/app/src/main/res/layout/item_row_product.xml
@@ -32,7 +32,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
             android:layout_marginEnd="10dp"
-            android:layout_marginTop="5dp"
+            android:layout_marginTop="12dp"
             app:layout_constraintStart_toEndOf="@+id/iv_logo"
             app:layout_constraintTop_toTopOf="@+id/iv_logo"
             app:layout_constraintEnd_toEndOf="parent"
@@ -44,16 +44,16 @@
             android:id="@+id/tv_description"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            tools:text="@string/testDesc"
+            tools:text="The smartest JavaScript IDE"
             android:textSize="12sp"
             android:fontFamily="@font/poppins_regular"
-            android:maxLines="2"
+            android:maxLines="1"
             app:layout_constraintStart_toEndOf="@+id/iv_logo"
             app:layout_constraintBottom_toBottomOf="@+id/iv_logo"
             app:layout_constraintEnd_toEndOf="@+id/tv_name"
             android:layout_marginStart="10dp"
             android:ellipsize="end"
-            android:paddingBottom="5dp"/>
+            android:paddingBottom="12dp"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
